<resources>
    <string name="app_name">Lisu Keyboard</string>
    <string name="action_settings">Settings</string>

    <string name="pref_vib">vib</string>
    <string name="pref_snd">snd</string>
    <string name="keyEnable">enable</string>
    <string name="keySelect">select</string>
    <string name="defaultLisu">defaultLisu</string>


    <string name="action_rate">Rate app</string>
    <string name="action_share">Share</string>
</resources>

